帮助模块中的查询功能

--- a/WMS/Views/Help/Index.cshtml
+++ b/WMS/Views/Help/Index.cshtml
@@ -2,7 +2,7 @@
     var Help_Text;
     window.onload = function () {
         $('#helpTree').tree({
-            onClick: function (node) {
+            onSelect: function (node) {
                 if (node) {
                     helpID = node.attributes.AttributeId;
                     $.getJSON("/HelpEdit/GetContentTxt/", { 'helpId': helpID }, function (helpContent) {
