--- a/WMS/Views/MoveStock/_CellPartial.cshtml
+++ b/WMS/Views/MoveStock/_CellPartial.cshtml
@@ -9,7 +9,7 @@
             else {
                 for (var row = 0; row < data.length; row++) {
                     $('#inBillDetail').datagrid('appendRow', {
-                        ITEM_NO: "0",
+//                        ITEM_NO: "0",
                         CELL_CODE: data[row].CELL_CODE,
                         PRODUCT_CODE: data[row].PRODUCT_CODE,
                         WEIGHT: data[row].WEIGHT,
