--- a/WMS/Views/Sampling/_BillPartial.cshtml
+++ b/WMS/Views/Sampling/_BillPartial.cshtml
@@ -11,10 +11,10 @@
     function billselected() {
         var billRow = $('#BillDetail').datagrid('getSelected');
         if (billRow) {
-            if (billRow.SOURCE_BILLNO == "" || billRow.SOURCE_BILLNO == null)
+//            if (billRow.SOURCE_BILLNO == "" || billRow.SOURCE_BILLNO == null)
                 $('#SOURCE_BILLNO').val(billRow.BILL_NO);
-            else
-                $('#SOURCE_BILLNO').val(billRow.SOURCE_BILLNO);
+//            else
+//                $('#SOURCE_BILLNO').val(billRow.SOURCE_BILLNO);
             $('#BarcodeDetail').datagrid({ url: '/Inventory/GetCell/?page=1&rows=20000&soursebill=' + billRow.BILL_NO });
             $("#BarcodeDetail").datagrid('reload');
         }
