--- a/WMS/Views/StockInBill/Index.cshtml
+++ b/WMS/Views/StockInBill/Index.cshtml
@@ -34,6 +34,7 @@
                 <th field="STATE" width="60" hidden="true">单据状态</th>
                 <th field="STATENAME" width="60">单据状态</th>
                 <th field="SOURCE_BILLNO" width="80">来源单号</th>
+                <th field="BATCH_NO" width="80">来源批次号</th>
                 <th field="LINE_NO" width="90" hidden="true">制丝线编号</th>
                 <th field="CIGARETTE_CODE" width="90" hidden="true">牌号代码</th>
                 <th field="CIGARETTE_NAME" width="90" >牌号</th>
